<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainActivity">

    <item android:id="@+id/implementation2"
        android:title="@string/implementation2_title"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/history"
        android:title="@string/history_title"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/Settings"
        android:title="@string/settings_title"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/User_name"
        android:title="@string/name_title"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>