<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SaveContactActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/save_contact_toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/save_contact_inner_constrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/go_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="@dimen/padding_10dp"
                android:contentDescription="@string/go_back_icon"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/create_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/create_contact"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/go_back_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/white"
                android:enabled="false"
                android:text="@string/save_contact"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/save_contact_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dimdim_color"
        app:layout_constraintTop_toBottomOf="@+id/save_contact_toobar">

        <ImageView
            android:id="@+id/sace_contact_image_holder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_200dp"
            android:src="@drawable/ic_baseline_perm_identity_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/save_contact_nestedscroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/save_contact_nestedscroll_inner_constrain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/google_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_google"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saving_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="Saving to"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saving_to_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="8dp"
                android:text="femiogundipe01@gmail.com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saving_to" />

            <ImageView
                android:id="@+id/ic_save_contact_textfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_baseline_perm_identity_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saving_to_email" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="24dp"
                android:hint="First name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saving_to_email"
                app:layout_constraintWidth_percent=".7" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="24dp"
                android:hint="Last name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name"
                app:layout_constraintWidth_percent=".7" />

<!--            <EditText-->
<!--                android:id="@+id/saving_phone_number"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="68dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:hint="Last name"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/first_name"-->
<!--                app:layout_constraintWidth_percent=".7" />-->

            <ImageView
                android:id="@+id/ic_saving_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_baseline_phone_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name" />

            <EditText
                android:id="@+id/saving_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="24dp"
                android:hint="Phone"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name"
                app:layout_constraintWidth_percent=".7" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>